# bitcoin-pro

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  ROADMAP.md  license_header.txt  meson.build
bpro/: Cargo.toml
bpro/src/: components.rs  construction.rs  contract.rs  derive.rs  generators.rs  lib.rs  sigs.rs
build-aux/: cargo.sh  com.pandoracore.BitcoinProDevel.json
contrib/: Makefile  README.md  bitcoin-pro-builder.dockerfile
contrib/docker-builder/: Makefile  README.md  linux-builder.dockerfile
data/: com.pandoracore.BitcoinPro.desktop  com.pandoracore.BitcoinPro.metainfo.xml
examples/: Electrum tests.bpro  RGB tests.bpro
src/: main.rs  meson.build
src/controller/: mod.rs  utxo_lookup.rs
src/model/: asset.rs  descriptor_params.rs  descriptors.rs  document.rs  mod.rs  operation.rs  profile.rs  tracking.rs  utxo.rs
src/util/: mod.rs  resolver_mode.rs
src/view/: app_window.rs  asset.glade  asset_create.glade  bpro.glade  descriptor.glade  descriptor_dlg.rs  file_save.glade  issue_dlg.rs  main.glade  mod.rs  open_dlg.rs  psbt.glade  pubkey.glade  pubkey.rs  pubkey_dlg.rs  pubkey_select.glade  pubkey_select_dlg.rs  save_dlg.rs  transaction.glade  utxo_select.glade
src/view_controller/: asset_dlg.rs  bpro_win.rs  descriptor_dlg.rs  issue_dlg.rs  mod.rs  open_dlg.rs  pubkey_dlg.rs  pubkey_select_dlg.rs  save_dlg.rs  utxo_select_dlg.rs
test/: BIP32 test vectors.bpro  Electrum tests.bpro
ui/: asset_create.glade  asset_issue.glade  asset_studio.glade  descriptor.glade  file_open.glade  main.glade  pubkey.glade  pubkey_select.glade  utxo_locator.glade  utxo_select.glade
