[package]
name = "bitcoin-pro"
description = "Professional bitcoin accounts & assets management"
version = "0.1.0-beta.3"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
edition = "2018"
license = "AGPL-3.0-only"
readme = "README.md"
exclude = ["examples"]

[[bin]]
name = "bitcoin-pro"

[dependencies]
# LNP/BP crates
amplify = { version = "3", features = ["serde"] }
amplify_derive = "2"
lnpbp = { version = "0.4", features = ["serde"] }
descriptor-wallet = { version = "0.4", features = ["serde"] }
slip132 = { version = "0.3.3", features = ["serde"] }
rgb-core = { version = "0.4", features = ["serde"] }
rgb20 = { version = "0.4", features = ["serde"] }
# rgb21 = { version = "0.3.0-beta.3", features = [] }
# rgb22 = { version = "0.3.0-beta.3", features = [] }
# rgb23 = { version = "0.3.0-beta.3", features = [] }
# Bitcoin
bitcoin = { version = "0.26", features = ["use-serde"] }
miniscript = { version = "5", features = ["use-serde", "compiler"] }
electrum-client = { version = "0.6" }
# Rust language
lazy_static = "1.4"
# Serialization & parsing
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_with = { version = "1.5", features = ["hex"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.8" }
toml = { version = "0.5" }
bech32 = { version = "0.7" }
base58 = { version = "0.1" }
base64 = { version = "0.12" }
# GTK+
gtk = { version = "0.9.2", features = ["v3_24_9"] }
gdk = { version = "0.13.2", features = ["v3_24"] }
gdk-pixbuf = "0.9.0"
gio =  { version = "0.9.1", features = ["v2_64"] }
glib = { version = "0.10.3", features = ["v2_64"] }
glade = "0.1.0-alpha.4"
qrcode-generator = "4.0.4"

[workspace]
members = [".", "bpro"]
default-members = [".", "bpro"]
