[package]
name = "bitcoin-pro"
description = "Professional bitcoin accounts & assets management"
version = "0.1.2"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
exclude = ["examples"]
rust-version = "1.56.0"

[[bin]]
name = "bitcoin-pro"

[dependencies]
# LNP/BP crates
amplify = { version = "3", features = ["serde"] }
amplify_derive = "2"
lnpbp = { version = "0.4", features = ["serde"] }
descriptor-wallet = { version = "0.4", features = ["serde"] }
slip132 = { version = "0.3.3", features = ["serde"] }
rgb-core = { version = "0.4.4", features = ["serde"] }
rgb20 = { version = "0.4", features = ["serde"] }
# rgb21 = { version = "0.3.0-beta.3", features = [] }
# rgb22 = { version = "0.3.0-beta.3", features = [] }
# rgb23 = { version = "0.3.0-beta.3", features = [] }
# Bitcoin
bitcoin = { version = "0.26", features = ["use-serde"] }
miniscript = { version = "5", features = ["use-serde", "compiler"] }
electrum-client = { version = "0.6" }
# Rust language
once_cell = "1.12.0"
# Serialization & parsing
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_with = { version = "1.5", features = ["hex"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.8" }
toml = { version = "0.5" }
bech32 = { version = "0.7" }
base58 = { version = "0.1" }
base64 = { version = "0.12" }
# GTK+
gtk = "0.15.5"
glib = "0.15.11"
qrcode-generator = "4.1.6"

[workspace]
members = ["."]
default-members = ["."]
